01-flux/gilfoyle/apps/coroot/ingress-oauth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: coroot
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: haproxy
  tls:
    - hosts:
        - "coroot.themiple.ru"
      secretName: coroot-tls
  rules:
    - host: "coroot.themiple.ru"
      http:
        paths:
          - path: /oauth2/
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
